2005-11-19  Tsuyoshi CHO  <tsuyoshi_cho@yahoo.co.jp>

	* w3m.el (w3m-menubar): Renew enable/disable condition for `[Copy
	This Session]',`[Download This URL]', and Append `[Toggle This
	Image]'.

	* w3m-bookmark.el (w3m-bookmark-menu-items): Renew enable/disable
	condition for `[Add This URL to Bookmark]'.

2005-11-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-open-all-links-in-new-session): Reverse the list of
	URLs.

2005-10-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-ibm-dev.el (shimbun-ibm-dev-from-address): Abolished.
	(shimbun-ibm-dev-content-end, shimbun-get-headers): Follow the
	change of site design.
	(shimbun-index-url, shimbun-from-address): New methods.
	(shimbun-article-url): Removed.

2005-10-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-tab-drag-mouse-function): Lower the buffer
	displayed before moving to the other tab.
	(w3m-tab-click-mouse-function): Ditto.

2005-10-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-util.el (w3m-add-face-property): Simplified.

2005-10-16  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-slashdot-jp.el (shimbun-slashdot-jp-group-alist):
	Update URL supporting by Slashcode 2.5.
	(shimbun-rss-build-message-id): Update regexp and msgid generate
	rule supporting by Slashcode 2.5.
	(shimbun-clear-contents): Add removal `script' tag.

2005-10-15  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* w3m-util.el (w3m-add-face-property): Add new functions.
	(w3m-remove-face-property): Ditto.

	* w3m.el (w3m-fontify-bold, w3m-fontify-underline)
	(w3m-fontify-strike-through, w3m-fontify-anchors)
	(w3m-fontify-images): Replace `w3m-add-text-properties' to
	`w3m-add-face-property' at FACE.
	(w3m-refontify-anchor): Change for FACE properly is list type.

2005-10-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-insert-image): Make it work with a face text
	property whose value is a list.
	(w3m-remove-image): Remove useless text property.